--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     <!-- Bootstrap -->
     <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+    
     <link href="stylesheets/main.css" rel="stylesheet">
+    
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,17 +20,50 @@
     <![endif]-->
   </head>
   <body>
+  <header>
   <div class="container">
   <div class="row">
-  <div class="col-sm-5">
-    <h1>Hello, world!</h1>
-    <input type="button" class="btn btn-danger" value="Submit Button">
+  <div class="col-sm-2">
+  <div class="logo"><img src="images/logo.png" alt="Pixel2HTML" class="n-logo"><img src="images/logo-retina.png" alt="Pixel2HTML" class="r-logo"></div>
+  </div>
+  <div class="col-sm-10">
+  <div class="navbar-header">
+      <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-navbar" aria-controls="bs-navbar" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
-    </div>
+  	<nav id="navbar">
+	<ul class="nav navbar-nav">
+      <li><a href="">Features</a>
+      <li><a href="">Pricing</a>
+      <li><a href="">Learn More</a>
+      <li><a href="">Contact Sales</a>
+    </ul>
+  </div></div>
 </div>
+</div>
+</header>
+<section class="intro">
+<div class="container">
+<div class="jumbotron text-center col-sm-push-2 col-sm-8">
+        <h1>The Best Way to Work Together</h1>
+        <p class="lead">We design and develop software for funded startups and established companies. Here are just some examples of our work</p>
+      </div>
+</div>
+</section>
+<section class="banner">
+<div class="container">
+<img src="images/banner.jpg">
+</div>
+</section>
+
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="javascript/bootstrap.min.js"></script>
   </body>
 </html>
