--- a/index.html
+++ b/index.html
@@ -56,7 +56,46 @@
 </section>
 <section class="banner">
 <div class="container">
-<img src="images/banner.jpg">
+<img src="images/banner.jpg" alt="Banner">
+</div>
+</section>
+<section class="services">
+<div class="container">
+<div class="row">
+<div class="col-sm-4">
+<div class="service_container">
+<div class="service_icon">
+<img src="images/icon_keep_your_data.png" alt="Keep your Data">
+</div>
+<div class="service_text">
+<h2>Keep your Data</h2>
+<p>Enterprise-ready performance and controls.</p>
+</div>
+</div>
+</div>
+<div class="col-sm-4">
+<div class="service_container">
+<div class="service_icon">
+<img src="images/icon_prototype_your_project.png" alt="Keep your Data">
+</div>
+<div class="service_text">
+<h2>Prototype your Project</h2>
+<p>24/7 proactive threat scanning to prevent attacks.</p>
+</div>
+</div>
+</div>
+<div class="col-sm-4">
+<div class="service_container">
+<div class="service_icon">
+<img src="images/icon_create_smart_text.png" alt="Keep your Data">
+</div>
+<div class="service_text">
+<h2>Create Smart Texts</h2>
+<p>24/7 proactive threat scanning to prevent attacks.</p>
+</div>
+</div>
+</div>
+</div>
 </div>
 </section>
 
