--- a/index.html
+++ b/index.html
@@ -98,8 +98,42 @@
 </div>
 </div>
 </section>
+<section class="slider">
+<div class="container">
+<div class="row">
+<div class="col-sm-6 col-sm-push-6">
+<div class="my-slider">
+<a class="slide_navigation" href=""></a>
+   <div class="slider-wrap">
+    <div class="item active-box">
+      <h2>Powerful Extensions</h2>
+      <p>This article is floated online with an aim to help you find the best dvd printing solution. Dvd printing is an important feature</p>
+      <p class="learnmore"><a href="#">Learn More</a></p>
+    </div>
 
+   </div>
+ <!-- Indicators -->
+  <ol class="slid-nav">
+    <li class="active_item"></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ol>
 
+  <!-- Wrapper for slides -->
+ 
+</div>
+</div>
+</div>
+</section>
+<section class="intro_pricing">
+<div class="container">
+<div class="jumbotron text-center col-sm-push-2 col-sm-8">
+        <h1>Simple Pricing</h1>
+        <p class="lead">It seems from the moment you begin to take your love of astronomy seriously, the thing that is on your mind is what kind.</p>
+      </div>
+</div>
+</section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
