partners section done

--- a/index.html
+++ b/index.html
@@ -201,6 +201,27 @@
       
 </div>
 </section>
+<section class="bottom">
+<div class="container">
+<div class="jumbotron text-center col-sm-push-2 col-sm-8">
+        <h1>The Ultimate Pasta Length Editor</h1>
+        <p class="lead">How to boost the design and developing process with a little help of four paws. True story by Snoop Dogg.</p>
+        <p><button class="btn btn-lg">Try it for Free</button></p>
+      </div>
+<div class="clearfix"></div>
+<div class="partners text-center">
+<h2>Superpasta trusted and used by multiple companies</h2>
+<div class="logo-partners">
+<img src="images/logo-evernote.png">
+<img src="images/logo-marvel.png">
+<img src="images/logo-brazzers.png">
+<img src="images/logo-motorola.png">
+<img src="images/logo-netflix.png">
+<img src="images/logo-adobe.png">
+</div>
+</div>
+</div>
+</section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
