--- a/index.html
+++ b/index.html
@@ -222,6 +222,54 @@
 </div>
 </div>
 </section>
+<footer>
+<div class="container">
+<div class="row">
+<div class="col-sm-1">
+<img src="images/logo-footer.png" alt="">
+</div>
+<div class="col-sm-3 footer_desc">
+Huge modern UI Kit containing 130+ 
+terrific components in 11 popular 
+categories. Each component is fully.
+</div>
+<div class="col-sm-1"></div>
+<div class="col-sm-5">
+<div class="menu_footer">
+<h2>Support</h2>
+<ul>
+<li><a href="#">About Us</a></li>
+<li><a href="#">Press</a></li>
+<li><a href="#">FAQ</a></li>
+</ul>
+</div>
+
+<div class="menu_footer">
+<h2>Business</h2>
+<ul>
+<li><a href="#">Home</a></li>
+<li><a href="#">Mobile</a></li>
+<li><a href="#">Pricing</a></li>
+</ul>
+</div>
+
+<div class="menu_footer">
+<h2>Community</h2>
+<ul>
+<li><a href="#">Developers</a></li>
+<li><a href="#">Referrals</a></li>
+<li><a href="#">Forum</a></li>
+</ul>
+</div>
+</div>
+<div class="col-sm-2">
+<img src="images/icon-language.png" alt="">
+<select id="language">
+<option>English (UK)</option>
+</select>
+</div>
+</div>
+</footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
