--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </header>
 <section class="intro">
 <div class="container">
-<div class="jumbotron text-center col-sm-push-2 col-sm-8">
+<div class="jumbotron text-center col-md-push-2 col-md-8 col-sm-12">
         <h1>The Best Way to Work Together</h1>
         <p class="lead">We design and develop software for funded startups and established companies. Here are just some examples of our work</p>
       </div>
@@ -62,7 +62,7 @@
 <section class="services">
 <div class="container">
 <div class="row">
-<div class="col-sm-4">
+<div class="col-md-4">
 <div class="service_container">
 <div class="service_icon">
 <img src="images/icon_keep_your_data.png" alt="Keep your Data">
@@ -73,7 +73,7 @@
 </div>
 </div>
 </div>
-<div class="col-sm-4">
+<div class="col-md-4">
 <div class="service_container">
 <div class="service_icon">
 <img src="images/icon_prototype_your_project.png" alt="Keep your Data">
@@ -84,7 +84,7 @@
 </div>
 </div>
 </div>
-<div class="col-sm-4">
+<div class="col-md-4">
 <div class="service_container">
 <div class="service_icon">
 <img src="images/icon_create_smart_text.png" alt="Keep your Data">
@@ -128,7 +128,7 @@
 </section>
 <section class="intro_pricing">
 <div class="container">
-<div class="jumbotron text-center col-sm-push-2 col-sm-8">
+<div class="jumbotron text-center col-md-push-2 col-md-8 col-sm-12">
         <h1>Simple Pricing</h1>
         <p class="lead">It seems from the moment you begin to take your love of astronomy seriously, the thing that is on your mind is what kind.</p>
       </div>
@@ -203,7 +203,7 @@
 </section>
 <section class="bottom">
 <div class="container">
-<div class="jumbotron text-center col-sm-push-2 col-sm-8">
+<div class="jumbotron text-center col-md-push-2 col-md-8 col-sm-12">
         <h1>The Ultimate Pasta Length Editor</h1>
         <p class="lead">How to boost the design and developing process with a little help of four paws. True story by Snoop Dogg.</p>
         <p><button class="btn btn-lg">Try it for Free</button></p>
@@ -225,7 +225,7 @@
 <footer>
 <div class="container">
 <div class="row">
-<div class="col-sm-1">
+<div class="col-md-1 col-sm-2">
 <img src="images/logo-footer.png" alt="">
 </div>
 <div class="col-sm-3 footer_desc">
@@ -233,7 +233,7 @@ Huge modern UI Kit containing 130+
 terrific components in 11 popular 
 categories. Each component is fully.
 </div>
-<div class="col-sm-1"></div>
+<div class="col-md-1"></div>
 <div class="col-sm-5">
 <div class="menu_footer">
 <h2>Support</h2>
