--- a/index.html
+++ b/index.html
@@ -273,6 +273,9 @@ categories. Each component is fully.
 </div>
 </div>
 </footer>
+<div id="scrolltop">
+<span class="glyphicon glyphicon-arrow-up">
+</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
