--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <div class="logo"><img src="images/logo.png" alt="Pixel2HTML" class="lg_device"><img src="images/logo-retina.png" alt="Pixel2HTML" class="retina_ready"></div>
+                    <div class="logo"><a href=""><img src="images/logo.png" alt="Pixel2HTML" class="lg_device"><img src="images/logo-retina.png" alt="Pixel2HTML" class="retina_ready"></a></div>
                 </div>
                 <div class="col-sm-10">
                     <div class="navbar-header">
